src/itmz-lexer.c
/* Generated by re2c 1.3 on Tue Sep 28 18:26:56 2021 */
/**

	MultiMarkdown -- Lightweight markup processor to produce HTML, LaTeX, and more.

	@file opml-lexer.c

	@brief Tokenize OPML file for parsing


	@author	Fletcher T. Penney
	@bug

**/

/*

	Copyright © 2016 - 2019 Fletcher T. Penney.


	The `MultiMarkdown 6` project is released under the MIT License..

	GLibFacade.c and GLibFacade.h are from the MultiMarkdown v4 project:

		https://github.com/fletcher/MultiMarkdown-4/

	MMD 4 is released under both the MIT License and GPL.


	CuTest is released under the zlib/libpng license. See CuTest.c for the
	text of the license.

	uthash library:
		Copyright (c) 2005-2016, Troy D. Hanson

		Licensed under Revised BSD license

	miniz library:
		Copyright 2013-2014 RAD Game Tools and Valve Software
		Copyright 2010-2014 Rich Geldreich and Tenacious Software LLC

		Licensed under the MIT license

	argtable3 library:
		Copyright (C) 1998-2001,2003-2011,2013 Stewart Heitmann
		<sheitmann@users.sourceforge.net>
		All rights reserved.

		Licensed under the Revised BSD License


	## The MIT License ##

	Permission is hereby granted, free of charge, to any person obtaining
	a copy of this software and associated documentation files (the
	"Software"), to deal in the Software without restriction, including
	without limitation the rights to use, copy, modify, merge, publish,
	distribute, sublicense, and/or sell copies of the Software, and to
	permit persons to whom the Software is furnished to do so, subject to
	the following conditions:

	The above copyright notice and this permission notice shall be
	included in all copies or substantial portions of the Software.

	THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
	EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
	MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
	IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
	CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
	TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
	SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.


	## Revised BSD License ##

	Redistribution and use in source and binary forms, with or without
	modification, are permitted provided that the following conditions are
	met:
	    * Redistributions of source code must retain the above copyright
	      notice, this list of conditions and the following disclaimer.
	    * Redistributions in binary form must reproduce the above
	      copyright notice, this list of conditions and the following
	      disclaimer in the documentation and/or other materials provided
	      with the distribution.
	    * Neither the name of the <organization> nor the
	      names of its contributors may be used to endorse or promote
	      products derived from this software without specific prior
	      written permission.

	THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
	"AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
	LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
	A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL <COPYRIGHT
	HOLDER> BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
	EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
	PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES LOSS OF USE, DATA, OR
	PROFITS OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
	LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
	NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
	SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.


*/

#include <stdlib.h>

#include "itmz-lexer.h"
#include "itmz-parser.h"


// Basic scanner struct

#define YYCTYPE		unsigned char
#define YYCURSOR	s->cur
#define YYMARKER	s->ptr
#define YYCTXMARKER	s->ctx

int itmz_scan(Scanner * s, const char * stop) {

scan:

	if (s->cur >= stop) {
		return 0;
	}

	s->start = s->cur;


	{
		YYCTYPE yych;
		unsigned int yyaccept = 0;
		yych = *YYCURSOR;

		switch (yych) {
			case '\t':
			case '\n':
			case '\r':
			case ' ':
				goto yy4;

			case '<':
				goto yy7;

			default:
				goto yy2;
		}

yy2:
		++YYCURSOR;
yy3: {
			goto scan;
		}

yy4:
		yych = *++YYCURSOR;

		switch (yych) {
			case '\t':
			case '\n':
			case '\r':
			case ' ':
				goto yy4;

			default:
				goto yy6;
		}

yy6: {
			return ITMZ_WSNL;
		}

yy7:
		yyaccept = 0;
		yych = *(YYMARKER = ++YYCURSOR);

		switch (yych) {
			case '/':
				goto yy8;

			case 'I':
			case 'i':
				goto yy10;

			case 'R':
			case 'r':
				goto yy11;

			case 'T':
			case 't':
				goto yy12;

			default:
				goto yy3;
		}

yy8:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'I':
			case 'i':
				goto yy13;

			case 'R':
			case 'r':
				goto yy14;

			case 'T':
			case 't':
				goto yy15;

			default:
				goto yy9;
		}

yy9:
		YYCURSOR = YYMARKER;

		switch (yyaccept) {
			case 0:
				goto yy3;

			case 1:
				goto yy51;

			default:
				goto yy62;
		}

yy10:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'T':
			case 't':
				goto yy16;

			default:
				goto yy9;
		}

yy11:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'E':
			case 'e':
				goto yy17;

			default:
				goto yy9;
		}

yy12:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'O':
			case 'o':
				goto yy18;

			default:
				goto yy9;
		}

yy13:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'T':
			case 't':
				goto yy19;

			default:
				goto yy9;
		}

yy14:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'E':
			case 'e':
				goto yy20;

			default:
				goto yy9;
		}

yy15:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'O':
			case 'o':
				goto yy21;

			default:
				goto yy9;
		}

yy16:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'H':
			case 'h':
				goto yy22;

			default:
				goto yy9;
		}

yy17:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'L':
			case 'l':
				goto yy23;

			default:
				goto yy9;
		}

yy18:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'P':
			case 'p':
				goto yy24;

			default:
				goto yy9;
		}

yy19:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'H':
			case 'h':
				goto yy25;

			default:
				goto yy9;
		}

yy20:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'L':
			case 'l':
				goto yy26;

			default:
				goto yy9;
		}

yy21:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'P':
			case 'p':
				goto yy27;

			default:
				goto yy9;
		}

yy22:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'O':
			case 'o':
				goto yy28;

			default:
				goto yy9;
		}

yy23:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'A':
			case 'a':
				goto yy29;

			default:
				goto yy9;
		}

yy24:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'I':
			case 'i':
				goto yy30;

			default:
				goto yy9;
		}

yy25:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'O':
			case 'o':
				goto yy31;

			default:
				goto yy9;
		}

yy26:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'A':
			case 'a':
				goto yy32;

			default:
				goto yy9;
		}

yy27:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'I':
			case 'i':
				goto yy33;

			default:
				goto yy9;
		}

yy28:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'U':
			case 'u':
				goto yy34;

			default:
				goto yy9;
		}

yy29:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'T':
			case 't':
				goto yy35;

			default:
				goto yy9;
		}

yy30:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'C':
			case 'c':
				goto yy36;

			default:
				goto yy9;
		}

yy31:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'U':
			case 'u':
				goto yy37;

			default:
				goto yy9;
		}

yy32:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'T':
			case 't':
				goto yy38;

			default:
				goto yy9;
		}

yy33:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'C':
			case 'c':
				goto yy39;

			default:
				goto yy9;
		}

yy34:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'G':
			case 'g':
				goto yy40;

			default:
				goto yy9;
		}

yy35:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'I':
			case 'i':
				goto yy41;

			default:
				goto yy9;
		}

yy36:
		yych = *++YYCURSOR;

		switch (yych) {
			case '\t':
			case '\n':
			case '\r':
			case ' ':
				goto yy44;

			case ':':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':
				goto yy48;

			case 'S':
			case 's':
				goto yy52;

			case 'T':
			case 't':
				goto yy53;

			default:
				goto yy43;
		}

yy37:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'G':
			case 'g':
				goto yy54;

			default:
				goto yy9;
		}

yy38:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'I':
			case 'i':
				goto yy55;

			default:
				goto yy9;
		}

yy39:
		yych = *++YYCURSOR;

		switch (yych) {
			case '>':
				goto yy56;

			case 'S':
			case 's':
				goto yy58;

			default:
				goto yy9;
		}

yy40:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'H':
			case 'h':
				goto yy59;

			default:
				goto yy9;
		}

yy41:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'O':
			case 'o':
				goto yy60;

			default:
				goto yy9;
		}

yy42:
		yych = *++YYCURSOR;
yy43:

		switch (yych) {
			case 0x00:
				goto yy9;

			case '/':
				goto yy46;

			case '>':
				goto yy50;

			default:
				goto yy42;
		}

yy44:
		yych = *++YYCURSOR;

		switch (yych) {
			case 0x00:
				goto yy9;

			case '\t':
			case '\n':
			case '\r':
			case ' ':
				goto yy44;

			case '/':
				goto yy46;

			case ':':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':
				goto yy48;

			case '>':
				goto yy50;

			case 'T':
			case 't':
				goto yy53;

			default:
				goto yy42;
		}

yy46:
		yych = *++YYCURSOR;

		switch (yych) {
			case 0x00:
				goto yy9;

			case '/':
				goto yy46;

			case '>':
				goto yy61;

			default:
				goto yy42;
		}

yy48:
		yych = *++YYCURSOR;

		switch (yych) {
			case 0x00:
				goto yy9;

			case '\t':
			case '\n':
			case '\r':
			case ' ':
				goto yy63;

			case '-':
			case '.':
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case ':':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':
				goto yy48;

			case '/':
				goto yy46;

			case '=':
				goto yy65;

			case '>':
				goto yy50;

			case 'T':
			case 't':
				goto yy67;

			default:
				goto yy42;
		}

yy50:
		++YYCURSOR;
yy51: {
			return ITMZ_TOPIC_OPEN;
		}

yy52:
		yych = *++YYCURSOR;

		switch (yych) {
			case '\t':
			case '\n':
			case '\r':
			case ' ':
				goto yy63;

			case '-':
			case '.':
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case ':':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':
				goto yy48;

			case '=':
				goto yy65;

			case '>':
				goto yy69;

			case 'T':
			case 't':
				goto yy67;

			default:
				goto yy43;
		}

yy53:
		yych = *++YYCURSOR;

		switch (yych) {
			case '\t':
			case '\n':
			case '\r':
			case ' ':
				goto yy63;

			case '-':
			case '.':
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case ':':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':
				goto yy48;

			case '=':
				goto yy65;

			case 'E':
			case 'e':
				goto yy71;

			case 'T':
			case 't':
				goto yy67;

			default:
				goto yy43;
		}

yy54:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'H':
			case 'h':
				goto yy72;

			default:
				goto yy9;
		}

yy55:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'O':
			case 'o':
				goto yy73;

			default:
				goto yy9;
		}

yy56:
		++YYCURSOR;
		{
			return ITMZ_TOPIC_CLOSE;
		}

yy58:
		yych = *++YYCURSOR;

		switch (yych) {
			case '>':
				goto yy74;

			default:
				goto yy9;
		}

yy59:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'T':
			case 't':
				goto yy76;

			default:
				goto yy9;
		}

yy60:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'N':
			case 'n':
				goto yy77;

			default:
				goto yy9;
		}

yy61:
		++YYCURSOR;
yy62: {
			return ITMZ_TOPIC_SELF_CLOSE;
		}

yy63:
		yych = *++YYCURSOR;

		switch (yych) {
			case 0x00:
				goto yy9;

			case '\t':
			case '\n':
			case '\r':
			case ' ':
				goto yy63;

			case '/':
				goto yy46;

			case ':':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':
				goto yy78;

			case '=':
				goto yy65;

			case '>':
				goto yy50;

			case 'T':
			case 't':
				goto yy80;

			default:
				goto yy42;
		}

yy65:
		yych = *++YYCURSOR;

		switch (yych) {
			case 0x00:
				goto yy9;

			case '\t':
			case '\n':
			case '\r':
			case ' ':
				goto yy65;

			case '"':
				goto yy81;

			case '\'':
				goto yy83;

			case '/':
				goto yy46;

			case '>':
				goto yy50;

			default:
				goto yy42;
		}

yy67:
		yych = *++YYCURSOR;

		switch (yych) {
			case 0x00:
				goto yy9;

			case '\t':
			case '\n':
			case '\r':
			case ' ':
				goto yy63;

			case '-':
			case '.':
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case ':':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':
				goto yy48;

			case '/':
				goto yy46;

			case '=':
				goto yy65;

			case '>':
				goto yy50;

			case 'E':
			case 'e':
				goto yy85;

			case 'T':
			case 't':
				goto yy67;

			default:
				goto yy42;
		}

yy69:
		++YYCURSOR;
		{
			return ITMZ_TOPICS_OPEN;
		}

yy71:
		yych = *++YYCURSOR;

		switch (yych) {
			case '\t':
			case '\n':
			case '\r':
			case ' ':
				goto yy63;

			case '-':
			case '.':
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case ':':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'U':
			case 'V':
			case 'W':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 'u':
			case 'v':
			case 'w':
			case 'y':
			case 'z':
				goto yy48;

			case '=':
				goto yy65;

			case 'T':
			case 't':
				goto yy67;

			case 'X':
			case 'x':
				goto yy86;

			default:
				goto yy43;
		}

yy72:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'T':
			case 't':
				goto yy87;

			default:
				goto yy9;
		}

yy73:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'N':
			case 'n':
				goto yy88;

			default:
				goto yy9;
		}

yy74:
		++YYCURSOR;
		{
			return ITMZ_TOPICS_CLOSE;
		}

yy76:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'S':
			case 's':
				goto yy89;

			default:
				goto yy9;
		}

yy77:
		yych = *++YYCURSOR;

		switch (yych) {
			case 'S':
			case 's':
				goto yy91;

			default:
				goto yy9;
		}

yy78:
		yych = *++YYCURSOR;

		switch (yych) {
			case 0x00:
				goto yy9;

			case '\t':
			case '\n':
			case '\r':
			case ' ':
				goto yy92;

			case '-':
			case '.':
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case ':':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':
				goto yy78;

			case '/':
				goto yy46;

			case '=':
				goto yy94;

			case '>':
				goto yy50;

			case 'T':
			case 't':
				goto yy96;

			default:
				goto yy42;
		}

yy80:
		yych = *++YYCURSOR;

		switch (yych) {
			case '\t':
			case '\n':
			case '\r':
			case ' ':
				goto yy92;

			case '-':
			case '.':
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case ':':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':
				goto yy78;

			case '=':
				goto yy94;

			case 'E':
			case 'e':
				goto yy98;

			case 'T':
			case 't':
				goto yy96;

			default:
				goto yy43;
		}

yy81:
		yych = *++YYCURSOR;
yy82:

		switch (yych) {
			case 0x00:
				goto yy9;

			case '"':
				goto yy99;

			case '/':
				goto yy101;

			case '>':
				goto yy103;

			default:
				goto yy81;
		}

yy83:
		yych = *++YYCURSOR;

		switch (yych) {
			case 0x00:
				goto yy9;

			case '\'':
				goto yy99;

			case '/':
				goto yy104;
